--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </header>
         
         <div class="intro">
-            <p>欢迎来到由Github Pages制作的网站，这里会存有一些我自己或者是其他人的视频</p>
+            <p>欢迎来到由Github Pages制作的网站，这里会存有一些我自己或者是其他人的视频，目前还是雏形，靠ai建设此网页</p>
         </div>
         
         <div class="button-container">
