--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             color: #2c3e50;
             font-size: 2.5em;
         }
+           <div class="video-container">
+       <h3>mc购买成功界面旋转一分钟（水）</h3>
+       <video controls width="100%" style="max-width: 600px;">
+           <source src="https://github.com/Wednesxuan/wednesxuan.github.io/raw/main/video/mcround.mp4" type="video/mp4">
+           您的浏览器不支持 HTML5 视频，请<a href="https://github.com/Wednesxuan/wednesxuan.github.io/raw/main/video/mcround.mp4">下载视频</a>。
+       </video>
+   </div>
+   
         .intro {
             background-color: white;
             padding: 20px;
