--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
             <div class="video-title">mc 购买成功界面旋转一分钟（水）</div>
             <video id="videoPlayer" controls>
                 <!-- 方案1：使用 GitHub 的 raw 链接（需确保链接正确） -->
-                <source src="https://raw.githubusercontent.com/Wednesxuan/wednesxuan.github.io/main/video/mcround.mp4" type="video/mp4">
+                <source src="https://raw.githubusercontent.com/Wednesxuan/wednesxuan.github.io/blob/main/video/self-made/mcround.mp4" type="video/mp4">
                 <!-- 方案2：备用 CDN 链接（如果 GitHub 链接被阻止） -->
-                <source src="https://github.com/Wednesxuan/wednesxuan.github.io/blob/main/video/mcround.mp4?raw=true" type="video/mp4">
+                <source src="https://github.com/Wednesxuan/wednesxuan.github.io/blob/main/video/self-made/mcround.mp4?raw=true" type="video/mp4">
                 <!-- 错误提示 -->
                 <div class="error-message">
                     ⚠️ 无法加载视频：您的浏览器可能不支持该格式，或视频链接已失效。<br>
