--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 <body>
     <div class="container">
         <header>
-            <h1>WednesVideoArchive</h1>
+            <h1>WednesVideoArchive/n/文斯视频存档馆</h1>
         </header>
 
         <div class="intro">
-            <p>欢迎来到由 GitHub Pages 制作的网站，这里会存有一些我自己或者是其他人的视频。</p>
+            <p>欢迎来到由 GitHub Pages 制作的网站，这里会存有一些我自己或者是其他人的视频/n/目前比较简陋，还在靠AI添加代码/n/此处视频大小应该不超过100MB，如果超过了请前往我的github下载</p>
         </div>
 
         <div class="button-container">
